--- a/419Project_CreditScore.Rmd
+++ b/419Project_CreditScore.Rmd
@@ -2,22 +2,59 @@
 title: "Stat 412"
 author: "Yolanda Jin"
 date: "24/11/2021"
-output: html_document
+output:
+  pdf_document: default
+  html_document: default
 ---
 
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
 ```
 
-## EDA
+## NA data (Income NA), Minority, Majority Groups
 
-- Might need to filter out NA data 
+- Added column for NA_indicator
+
+- split groups to minority vs majority group
+
+
+
+- Q1: do we want NA to be a separate group? based on EDA, might or might not do so
+
+```{r}
+# Read Credit Scoring Data Training Set
+cs_train = read.csv("cs-training.csv")
+cs_train[1:10,]
+is.na(cs_train[7,]$MonthlyIncome)
+
+
+## 0. NA Monthly Income
+
+# Add col to indicate whether monthly Income is NA or not
+cs_train$NA_Indicator <- 0  # Set all NA_Indicator to zero
+cs_train$NA_Indicator[is.na(cs_train$MonthlyIncome)] <- 1  # Change NA income indexes to 1
+head(cs_train[cs_train$NA_Indicator==1,])  # Check the ones indicated as NA
+
+# If we want to split NA to another group
+#cs_train_NA <- cs_train[cs_train$MonthlyIncome==NA,]
+#head(cs_train_NA)
+
+
+
+## 1. Separate minority data vs majority data vs NA data total 150k
+cs_train_min <- cs_train[cs_train$SeriousDlqin2yrs==1,]  # 10,026 obs
+cs_train_maj <- cs_train[cs_train$SeriousDlqin2yrs==0,]  # 139,974 obs
+
+```
+
+
+## EDA
 
 - monthly income = 0
 
 - 30k monthly income = NA
 
-- # Dependent = NA 4k
+- Dependent = NA 4k
 
 - age 0 remove - only 1 point
 
@@ -29,10 +66,16 @@ knitr::opts_chunk$set(echo = TRUE)
 
 - 80 or more
 
+```{r}
+#plot(SeriousDlqin2yrs ~ age, data = cs_train_maj)
+cs_train_maj_g1 <- cs_train_maj[cs_train_maj$MonthlyIncome<500000,] # less than 500k monthly income
+cs_train_maj_g1 <- cs_train_maj[cs_train_maj$MonthlyIncome<20000,] # less than 20k monthly income
+plot(MonthlyIncome ~ age, data = cs_train_maj_g1)
+```
 
-## Question
+## Question/Goal
 
-Comparing our model against paper's model
+- Comparing our model performance against paper's model
 
 - Most important factors
 
@@ -47,11 +90,59 @@ Comparing our model against paper's model
 ## Balancing Data
 
 - Use clustering and pick one sub-group from majority
+  - can try Age/Income
+  - try Income/debt ratio
 
 - Use bagging algorithm to create more minority data
 
 - Use NA indicator 0 or 1 (maybe use mean/median)
 
+
+```{r}
+# Cluster Grouping Majority Data (Try to cluster data by age/monthly income)
+set.seed(1) # for reproducibility
+
+head(cs_train_maj)
+
+# Test with smaller group based on monthly income range
+cs_train_maj_g1 <- cs_train_maj[cs_train_maj$NA_Indicator==0,] # Filter out NA monthly income first
+cs_train_maj_g1 <- cs_train_maj_g1[cs_train_maj_g1$MonthlyIncome<20000,]  #38035 obs
+head(cs_train_maj_g1)
+
+```
+
+```{r}
+# Create a dat with the two predictors of interest
+dat <- cs_train_maj_g1[,c(4,7)]  # Age and MonthlyIncome
+head(dat)
+
+n_maj <- nrow(dat) # get number of rows
+
+# Initial assignments to three groups that will need to update
+assignments <- factor(sample(c(1,2,3), n_maj, replace = TRUE))
+#plot(dat, col=assignments, xlim = c(0,110), asp=1)
+plot(dat, col=assignments)
+```
+
+```{r}
+# Boostrapping Minority Data
+set.seed(1) # for reproducibility
+# set number of minority data to reproduce
+n_add <- 1000
+
+n_min <- nrow(cs_train_min)
+n_min
+index <- sample(n_min, n_add, replace = TRUE)
+#plot(density(index),  main="")  # show density curve of the index we randomized
+hist(index, breaks = 100)
+min(index)
+max(index)
+length(index)
+
+# We add the additional data for future analysis
+cs_train_min_add <- cs_train_min[index,]
+head(cs_train_min_add)
+```
 
 ## Which models to try
 
@@ -67,7 +158,7 @@ Comparing our model against paper's model
 
 
 
-```{r echo=FALSE}
+```{r}
 
 ```
 
